Say on the cluster face what is waiting in each sink writer, by stream and table
A sink writer now reports what is waiting in it rather than settled: the
rows it has taken in and not yet handed to its writer, by the stream they
came on, and the rows it has handed over whose writes have not settled, by
the table they go to. Each reading replaces the last, and a stream or table
with nothing waiting is absent from it. Read per writer, beside the rows
queued into the processor, these say which table a writer that has fallen
behind is behind on.

The readings travel as the job's own statistics under the processor that
took them, named by a public class of their own so the writer and the reader
cannot spell them differently. The cluster face carries them per processor,
and the CLI's machine forms print them.